[tool.poetry]
name = "lab_superturtle"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "superturtle_test"}]

[tool.poetry.dependencies]
python = "^3.10"
superturtle = "^0.1.0"
easing-functions = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
